--- a/index.html
+++ b/index.html
@@ -34,10 +34,20 @@
         <a href="#" class="navLinks">03 Technology</a>
       </div>
     </div>
-    00 Home 01 Destination 02 Crew 03 Technology So, you want to travel to Space
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and
-    relax because we’ll give you a truly out of this world experience! Explore
+    <div class="container-2">
+      <div class="hero-text">
+        <h1>So, you want to travel to</h1>
+        <span class="space">Space</span>
+        <p>
+          Let’s face it; if you want to go to space, you might as well <br />
+          genuinely go to outer space and not hover kind of on the <br />
+          edge of it. Well sit back, and relax because we’ll give you a <br />
+          truly out of this world experience!
+        </p>
+      </div>
+      <button class="exploreBtn borderbtn"><h1>Explore</h1></button>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
