--- a/index.html
+++ b/index.html
@@ -22,32 +22,75 @@
       <img id="logo" src="/assets/shared/logo.svg" alt="" />
       <hr class="line" />
       <div class="1">
-        <a href="#" class="navLinks">00 Home</a>
+        <a href="#" class="navLinks home"><span class="tab-num">00</span> Home</a>
       </div>
       <div class="2">
-        <a href="#" class="navLinks">01 Destination</a>
+        <a href="#" class="navLinks dest"
+          ><span class="tab-num">01</span> Destination</a
+        >
       </div>
       <div class="3">
-        <a href="#" class="navLinks">02 Crew</a>
+        <a href="#" class="navLinks crew"><span class="tab-num">02</span> Crew</a>
       </div>
       <div class="4">
-        <a href="#" class="navLinks">03 Technology</a>
+        <a href="#" class="navLinks tech"
+          ><span class="tab-num">03 </span> Technology</a
+        >
       </div>
     </div>
-    <div class="container-2">
-      <div class="hero-text">
-        <h1>So, you want to travel to</h1>
-        <span class="space">Space</span>
-        <p>
-          Let’s face it; if you want to go to space, you might as well <br />
-          genuinely go to outer space and not hover kind of on the <br />
-          edge of it. Well sit back, and relax because we’ll give you a <br />
-          truly out of this world experience!
-        </p>
+    <div class="homepage">
+      <div class="container-2">
+        <div class="hero-text">
+          <h1>So, you want to travel to</h1>
+          <span class="space">Space</span>
+          <p>
+            Let’s face it; if you want to go to space, you might as well <br />
+            genuinely go to outer space and not hover kind of on the <br />
+            edge of it. Well sit back, and relax because we’ll give you a <br />
+            truly out of this world experience!
+          </p>
+        </div>
+        <button class="exploreBtn borderbtn"><h1>Explore</h1></button>
       </div>
-      <button class="exploreBtn borderbtn"><h1>Explore</h1></button>
     </div>
-
+    <div class="planet">
+      <img
+        class="planet-bg"
+        src="assets/destination/background-destination-desktop.jpg"
+        alt=""
+      />
+      <div class="planet">
+      <h1 class="headline"><span class="tab-num">01 </span>pick your destination</h1>
+      <div class="container-destination">
+        <img class="planet-img" src="/assets/destination/image-moon.png" alt="" />
+        <div class="planet-section">
+          <div class="planets">
+            <a href="#" class="planet-name moon">moon</a>
+            <a href="#" class="planet-name mars">mars</a>
+            <a href="#" class="planet-name europa">europa</a>
+            <a href="#" class="planet-name titan">titan</a>
+          </div>
+          <h1 class="planet-title">moon</h1>
+          <p class="planet-description">
+            See our planet as you’ve never seen it before. A perfect relaxing
+            trip away to help regain perspective and come back refreshed. While
+            you’re there, take in some history by visiting the Luna 2 and Apollo
+            11 landing sites.
+          </p>
+          <hr class="planet-line" />
+          <div class="distance-time">
+            <div>
+              <h3>avg. distance</h4>
+                <h2 class="distance">384,400km</h2>
+            </div>
+            <div>
+              <h3>est. travel time</h3>
+              <h2 class="time">3 days</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
