--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="/assets/home/background-home-desktop.jpg" alt="" />
     </div>
     <div class="blurbox"></div>
-    <div class="container">
+    <div class="container nav">
       <img id="logo" src="/assets/shared/logo.svg" alt="" />
       <hr class="line" />
       <div class="1">
