--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         alt=""
       />
       <div class="planet">
-      <h1 class="headline"><span class="tab-num">01 </span>pick your destination</h1>
+        <div class="head">
+          <h1 class="headline"><span class="tab-num">01 </span>pick your destination</h1>
+        </div>
+
       <div class="planets">
         <a href="#" class="planet-name moon">moon</a>
         <a href="#" class="planet-name mars">mars</a>
@@ -70,7 +73,6 @@
       <div class="container-destination">
         <img class="planet-img" src="/assets/destination/image-moon.png" alt="" />
         <div class="planet-section">
-
           <h1 class="planet-title">moon</h1>
           <p class="planet-description">
             See our planet as you’ve never seen it before. A perfect relaxing
@@ -92,6 +94,32 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <div class="show-crew">
+      <img class="crewBg" src="/assets/crew/background-crew-desktop.jpg" alt="">
+      <div class="crew-container">
+        <div>
+          <h1 class="headline-crew"><span class="tab-num">02 </span>meet your crew</h1>
+          <div class="crew-content">
+            <h2>Commander</h2>
+            <h1>Douglas Hurley</h1> 
+            <p>
+              Douglas Gerald Hurley is an American engineer, former Marine
+              Corps pilot and former NASA astronaut. He launched into space for the third
+              time as commander of Crew Dragon Demo-2.
+            </p>
+          </div>
+          <div class="btns btn-container">
+            <button class="crew-btn btn-1"></button>
+            <button class="crew-btn btn-2"></button>
+            <button class="crew-btn btn-3"></button>
+            <button class="crew-btn btn-4"></button>
+          </div>
+        </div>
+        <div class="crew-img">
+          <img src="/assets/crew/image-douglas-hurley.png" alt="">
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script> 
   </body>
 </html>
