--- a/index.html
+++ b/index.html
@@ -120,6 +120,40 @@
         </div>
       </div>
     </div>
+    <div class="show-tech">
+      <h1 class="headline-tech">
+        <span class="tab-num">03 </span>space launch 101
+      </h1>
+  
+      <div class="space-tab">
+        <button class="space-btn btn-1">1</button>
+        <button class="space-btn btn-2">2</button>
+        <button class="space-btn btn-3">3</button>
+      </div>
+      <div class="spaceBg">
+        <img src="/assets/technology/background-technology-desktop.jpg" alt="" />
+      </div>
+      <div class="tech-container">
+        <div class="tech-content"> 
+          <h3>The terminology...</h3>
+          <h1>Launch vehicle</h1>
+          <p>
+            A launch vehicle or carrier rocket is a rocket-propelled vehicle used
+            to carry a payload from Earth's surface to space, usually to Earth
+            orbit or beyond. Our WEB-X carrier rocket is the most powerful in
+            operation. Standing 150 metres tall, it's quite an awe-inspiring sight
+            on the launch pad!
+          </p>
+        </div>
+        <div class="space-img insert">
+          <img
+            src="/assets/technology/image-launch-vehicle-portrait.jpg"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+    
     <script src="script.js"></script> 
   </body>
 </html>
