--- a/technology-vehicle.html
+++ b/technology-vehicle.html
@@ -1,32 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Space tourism website</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | Space tourism website</title>
+  </head>
+  <body>
+    <h1 class="headline-tech">
+      <span class="tab-num">03 </span>space launch 101
+    </h1>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  03 Space launch 101
-
-  1
-  2
-  3
-
-  The terminology...
-  Launch vehicle
-
-  A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
-  payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
-  WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
-  it's quite an awe-inspiring sight on the launch pad!
-</body>
+    <div class="space-tab">
+      <button class="space-btn btn-1">1</button>
+      <button class="space-btn btn-2">2</button>
+      <button class="space-btn btn-3">3</button>
+    </div>
+    <div class="spaceBg">
+      <img src="/assets/technology/background-technology-desktop.jpg" alt="" />
+    </div>
+    <div class="tech-container">
+      <div class="tech-content"> 
+        <h3>The terminology...</h3>
+        <h1>Launch vehicle</h1>
+        <p>
+          A launch vehicle or carrier rocket is a rocket-propelled vehicle used
+          to carry a payload from Earth's surface to space, usually to Earth
+          orbit or beyond. Our WEB-X carrier rocket is the most powerful in
+          operation. Standing 150 metres tall, it's quite an awe-inspiring sight
+          on the launch pad!
+        </p>
+      </div>
+      <div class="space-img">
+        <img
+          src="/assets/technology/image-launch-vehicle-portrait.jpg"
+          alt=""
+        />
+      </div>
+    </div>
+  </body>
 </html>
