--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <a href="#" class="planet-name titan">titan</a>
       </div>
       <div class="container-destination">
-        <img class="planet-img" src="/assets/destination/image-moon.png" alt="" />
+        <img class="planet-img" src="/assets/destination/image-moon.webp" alt="" />
         <div class="planet-section">
           <h1 class="planet-title">moon</h1>
           <p class="planet-description">
