fixed image not loading

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   </head>
   <body>
     <div class="home-img">
-      <img src="/assets/home/background-home-desktop.jpg" alt="" />
+      <img src="./assets/home/background-home-desktop.jpg" alt="" />
     </div>
     <div class="blurbox"></div>
     <div class="container nav">
-      <img id="logo" src="/assets/shared/logo.svg" alt="" />
+      <img id="logo" src="./assets/shared/logo.svg" alt="" />
       <hr class="line" />
       <div class="1">
         <a href="#" class="navLinks home"><span class="tab-num">00</span> Home</a>
@@ -56,7 +56,7 @@
     <div class="planet">
       <img
         class="planet-bg"
-        src="assets/destination/background-destination-desktop.jpg"
+        src="./assets/destination/background-destination-desktop.jpg"
         alt=""
       />
       <div class="planet">
@@ -71,7 +71,7 @@
         <a href="#" class="planet-name titan">titan</a>
       </div>
       <div class="container-destination">
-        <img class="planet-img" src="/assets/destination/image-moon.webp" alt="" />
+        <img class="planet-img" src="./assets/destination/image-moon.webp" alt="" />
         <div class="planet-section">
           <h1 class="planet-title">moon</h1>
           <p class="planet-description">
@@ -95,7 +95,7 @@
       </div>
     </div>
     <div class="show-crew">
-      <img class="crewBg" src="/assets/crew/background-crew-desktop.jpg" alt="">
+      <img class="crewBg" src="./assets/crew/background-crew-desktop.jpg" alt="">
       <div class="crew-container">
         <div>
           <h1 class="headline-crew"><span class="tab-num">02 </span>meet your crew</h1>
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div class="crew-img">
-          <img src="/assets/crew/image-douglas-hurley.png" alt="">
+          <img src="./assets/crew/image-douglas-hurley.png" alt="">
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@
         <button class="space-btn btn-3">3</button>
       </div>
       <div class="spaceBg">
-        <img src="/assets/technology/background-technology-desktop.jpg" alt="" />
+        <img src="./assets/technology/background-technology-desktop.jpg" alt="" />
       </div>
       <div class="tech-container">
         <div class="tech-content"> 
@@ -147,7 +147,7 @@
         </div>
         <div class="space-img insert">
           <img
-            src="/assets/technology/image-launch-vehicle-portrait.jpg"
+            src="./assets/technology/image-launch-vehicle-portrait.jpg"
             alt=""
           />
         </div>
